Consolidated all get endpoints into one in OfferController